--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -1,3 +1,13 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
+body {
+  background-color: #141414;
+  color: #ffffff;
+  font-family: "Inter", sans-serif;
+}
 
 /*# sourceMappingURL=style.css.map */
