--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,6 +1,10 @@
+//-- colors
 $primary_color: #c5f82a;
 $secondary_color: #ffffff;
-$button-bg-color: #333333;
+$links-bg-color: #333333;
 $bg-container:#1f1f1f;
 $bg-main-color:#141414;
-$font-body:14px;
+
+//--fonts
+$font-body-size:14px;
+$body-font:'Inter', sans-serif;
