--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,9 +1,72 @@
-@import 'variables';
-@import 'utils';
+@import "variables";
+@import "utils";
 
+body {
+  background-color: $bg-main-color;
+  color: $secondary_color;
+  font-family: $body-font;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  max-height: 100%;
+  overflow: hidden;
+}
 
-body{
-    background-color:$bg-main-color;
-    color: $secondary_color;
-    font-family: $body-font;
+.container {
+  padding: 1.5rem 0;
+  width: 335px;
+  background-color: $bg-container;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.5rem;
+
+  img {
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+  }
+
+  header {
+    h1 {
+      font-size: 1.4rem;
+      margin-bottom: 0.5rem;
+      color: $secondary_color;
+    }
+    span {
+      font-size: $font-body-size;
+      font-weight: 600;
+      color: $primary_color;
+    }
+  }
+
+  p {
+    font-size: $font-body-size;
+    color: lighten($links-bg-color, 60%);
+  }
+
+  .links {
+    width: 85%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    gap: 1rem;
+
+    a {
+      text-decoration: none;
+      color: $secondary_color;
+      background-color: $links-bg-color;
+      border-radius: 5px;
+      padding: .8rem;
+      font-size: $font-body-size;
+      font-weight: 600;
+
+      &:hover{
+        background-color: $primary_color;
+        color: $bg-container;
+      }
+    }
+  }
 }
