--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -8,6 +8,62 @@ body {
   background-color: #141414;
   color: #ffffff;
   font-family: "Inter", sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  max-height: 100%;
+  overflow: hidden;
+}
+
+.container {
+  padding: 1.5rem 0;
+  width: 335px;
+  background-color: #1f1f1f;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.5rem;
+}
+.container img {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+}
+.container header h1 {
+  font-size: 1.4rem;
+  margin-bottom: 0.5rem;
+  color: #ffffff;
+}
+.container header span {
+  font-size: 14px;
+  font-weight: 600;
+  color: #c5f82a;
+}
+.container p {
+  font-size: 14px;
+  color: #cccccc;
+}
+.container .links {
+  width: 85%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  gap: 1rem;
+}
+.container .links a {
+  text-decoration: none;
+  color: #ffffff;
+  background-color: #333333;
+  border-radius: 5px;
+  padding: 0.8rem;
+  font-size: 14px;
+  font-weight: 600;
+}
+.container .links a:hover {
+  background-color: #c5f82a;
+  color: #1f1f1f;
 }
 
 /*# sourceMappingURL=style.css.map */
