--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -14,6 +14,7 @@ body {
   height: 100vh;
   max-height: 100%;
   overflow: hidden;
+  animation: animate 1s ease-in-out normal;
 }
 
 .container {
@@ -65,7 +66,40 @@ body {
   background-color: #c5f82a;
   color: #1f1f1f;
 }
+.container .links .github {
+  animation: animateLink 0.3s ease-in;
+}
+.container .links .frontend {
+  animation: animateLink 0.5s ease-in;
+}
+.container .links .linkedin {
+  animation: animateLink 0.7s ease-in;
+}
+.container .links .twitter {
+  animation: animateLink 1s ease-in;
+}
+.container .links .instagram {
+  animation: animateLink 1.2s ease-in;
+}
 
+@keyframes animate {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes animateLink {
+  0% {
+    opacity: 0;
+    width: 0;
+  }
+  100% {
+    opacity: 1;
+    width: 100%;
+  }
+}
 @media (min-width: 1280px) {
   .container {
     width: 370px;
